# check-docker-labels

./: .gitignore  Pipfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/: test.yml
.github/workflows/: test.yml  unit_test.yml
src/checkdockerlabels/: __main__.py  labelcheck.py
src/labelcheck/: __main__.py  labelcheck.py
tests/: labelcheck_test.py
